# psychic-octo-potato

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  prestart.js  vite.config.js
db/: index.js  setup.js
src/: app.rs  lib.rs  main.rs  pages.rs  sc.rs
src/sc/: notification.rs  testing.rs  web3.rs
src/sc/wallets/: Cargo.toml
src/sc/wallets/src/: lib.rs  xmr.rs
