[package]
name = "psychic-octo-potato"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.64"
reqwest = "0.11.20"
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
yew = { version = "0.20.0", features = ["csr"] }
yew-hooks = "0.2.0"
yew-router = "0.17.0"
