[package]
name = "wallets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bitcoin = "0.30.1"
ethereum-types = "0.14.1"
ethsign = "0.9.0"
hex = "0.4.3"
orchard = "0.6.0"
rand = "0.8.5"
secp256k1 = "0.27.0"
serde = { version = "1.0.188", features = ["derive"] }
